# libpolymake-julia

./: .gitignore  CMakeLists.txt  FindPolymake.cmake  OscarCI.toml  Project.toml  README.md  build_tarballs.jl  test-prepare.jl  type_setup.pl
.github/workflows/: test-oscar.yml  test-polymake.yml  test-polymakejl-branch.yml  test-polymakejl-master.yml  test-polymakejl-release.yml
include/: polymake_includes.h  polymake_tools.h  polymake_type_modules.h
include/jlpolymake/: caller.h  containers.h  functions.h  jlpolymake.h  tools.h  type_modules.h
src/: beneath_beyond.cpp  caller.cpp  containers.cpp  direct_calls.cpp  functions.cpp  jlpolymake.cpp  polymake.cpp  polymake_map.cpp  polymake_pairs.cpp  type_array.cpp  type_array_extended.cpp  type_array_polynomial.cpp  type_arrays.cpp  type_bigobject.cpp  type_bigobjects.cpp  type_decoration.cpp  type_graph.cpp  type_homologygroup.cpp  type_incidencematrix.cpp  type_integer.cpp  type_integers.cpp  type_lists.cpp  type_map.cpp  type_matrices.cpp  type_matrix.cpp  type_matrix_extended.cpp  type_pair.cpp  type_pair_extended.cpp  type_pair_list.cpp  type_pairs.cpp  type_polynomial.cpp  type_quadraticextension.cpp  type_rational.cpp  type_rationals.cpp  type_set.cpp  type_sparsematrix.cpp  type_sparsevector.cpp  type_switchtable.cpp  type_translations.cpp  type_tropicalnumber.cpp  (+4 more)
src/polymake/: apptojson.pl  generate_deps_tree.jl  type_setup.pl
src/runner/: polymake_run_script.cpp
test/: .gitignore
